force-app/main/default/objects/Kiryl_s_Object__c/Kiryl_s_Object__c.object-meta.xml
<CustomObject>
    <description>Tested changes by Kristina</description>
    <label>Kiryl&apos;s Object</label>
    <nameField>
        <label>Kiryl&apos;s Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Kiryl&apos;s Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>