force-app/main/default/objects/Kiryl_s_Object__c/fields/Kiryl_s_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Kiryl_s_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Kiryl&apos;s Checkbox</label>
    <type>Checkbox</type>
</CustomField>