force-app/main/default/objects/Kiryl_s_Object__c/fields/Kiryl_s_Phone__c.field-meta.xml
<CustomField>
    <fullName>Kiryl_s_Phone__c</fullName>
    <label>Kiryl&apos;s Phone</label>
    <type>Phone</type>
</CustomField>