force-app/main/default/objects/Kiryl_s_Object__c/fields/Kiryl_s_Text__c.field-meta.xml
<CustomField>
    <fullName>Kiryl_s_Text__c</fullName>
    <label>Kiryl&apos;s Text</label>
    <length>233</length>
    <type>Text</type>
</CustomField>